[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/QuitMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/Pause.gd" type="Script" id=5]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseOverlay" instance=ExtResource( 2 )]
margin_top = 195.759
margin_bottom = 266.759
custom_fonts/font = ExtResource( 1 )
text = "PAUSED"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -393.95
margin_top = -253.0
margin_right = 394.05
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeSceneButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_right = 788.0
margin_bottom = 136.0
mouse_default_cursor_shape = 1
custom_fonts/font = ExtResource( 1 )
text = "Menu principal"
next_Scene_Path = "res://src/Screens/MainScreen.tscn"

[node name="Pause" type="Button" parent="PauseOverlay/PauseMenu"]
margin_top = 140.0
margin_right = 788.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 1 )
text = "Continuer"

[node name="QuitMenu" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]
margin_top = 207.0
margin_right = 788.0
margin_bottom = 343.0
mouse_default_cursor_shape = 1
custom_fonts/font = ExtResource( 1 )
[connection signal="button_up" from="PauseOverlay/PauseMenu/ChangeSceneButton" to="." method="_on_Menu_button_up"]
[connection signal="button_up" from="PauseOverlay/PauseMenu/Pause" to="." method="_on_Pause_button_up"]
